src/objects/Filtros_principales_4Planning__c.object
<CustomObject>
    <fields>
        <fullName>Moneda_Grafico_Esferas__c</fullName>
        <label>Moneda Grafico Esferas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EUR</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CLF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>GTQ</fullName>
                </value>
                <value>
                    <fullName>LBP</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NIO</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>PAB</fullName>
                </value>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>UYU</fullName>
                </value>
                <value>
                    <fullName>VEF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercio</fullName>
                </value>
                <value>
                    <fullName>Comunicaciones y tecnologia</fullName>
                </value>
                <value>
                    <fullName>Financiero</fullName>
                </value>
                <value>
                    <fullName>Industria</fullName>
                </value>
                <value>
                    <fullName>Sector Público</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
                <value>
                    <fullName>Servicios Públicos</fullName>
                </value>
                <value>
                    <fullName>Transporte</fullName>
                </value>
                <value>
                    <fullName>Todos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_sector__c</fullName>
        <label>Sub sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sector__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centros Comerciales</fullName>
                </value>
                <value>
                    <fullName>Automotores y Camiones</fullName>
                </value>
                <value>
                    <fullName>Droguerías</fullName>
                </value>
                <value>
                    <fullName>Tienda Departamental</fullName>
                </value>
                <value>
                    <fullName>Otros Comercios</fullName>
                </value>
                <value>
                    <fullName>Supermercados</fullName>
                </value>
                <value>
                    <fullName>Alimentos y Bebidas</fullName>
                </value>
                <value>
                    <fullName>Textil y Calzado</fullName>
                </value>
                <value>
                    <fullName>Combustibles y Lubricantes</fullName>
                </value>
                <value>
                    <fullName>Call Centers</fullName>
                </value>
                <value>
                    <fullName>Grupo Telefonica</fullName>
                </value>
                <value>
                    <fullName>Hardware Tecnológico</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Contenido Multimedia</fullName>
                </value>
                <value>
                    <fullName>Telcos e Internet</fullName>
                </value>
                <value>
                    <fullName>Banca</fullName>
                </value>
                <value>
                    <fullName>Instituciones financieras no bancarias</fullName>
                </value>
                <value>
                    <fullName>Medios de Pago</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Agro, Pesca y Forestación</fullName>
                </value>
                <value>
                    <fullName>Construccion</fullName>
                </value>
                <value>
                    <fullName>Industria Alimentos</fullName>
                </value>
                <value>
                    <fullName>Industria Automotriz y Autopartes</fullName>
                </value>
                <value>
                    <fullName>Industria Ligera y Manufacturas</fullName>
                </value>
                <value>
                    <fullName>Industria Metalurgica y Pesada</fullName>
                </value>
                <value>
                    <fullName>Industria Química</fullName>
                </value>
                <value>
                    <fullName>Industria Textil y Calzado</fullName>
                </value>
                <value>
                    <fullName>Laboratorios</fullName>
                </value>
                <value>
                    <fullName>Mineria</fullName>
                </value>
                <value>
                    <fullName>Petroleo y Gas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsuarioFiltro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usuario</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Filtros_principales_4Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zona_Objetivo_valor_1_eje_x__c</fullName>
        <label>Zona Objetivo valor 1 eje x</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zona_Objetivo_valor_2_eje_x__c</fullName>
        <label>Zona Objetivo valor 2 eje x</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>altura_zona_objetivo_maxima__c</fullName>
        <label>altura zona objetivo maxima</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>altura_zona_objetivo_minima__c</fullName>
        <label>altura zona objetivo minima</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>conectorLogico1__c</fullName>
        <label>conectorLogico1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>conectorLogico2__c</fullName>
        <label>conectorLogico2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>conectorLogico3__c</fullName>
        <label>conectorLogico3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filtro1Valor__c</fullName>
        <label>filtro1Valor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filtro2Operacion__c</fullName>
        <label>filtro2Operacion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filtro2Parametro__c</fullName>
        <label>filtro2Parametro</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filtro2Valor__c</fullName>
        <label>filtro2Valor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>filtro3Operacion__c</fullName>
        <label>filtro3Operacion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filtro3Parametro__c</fullName>
        <label>filtro3Parametro</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filtro3Valor__c</fullName>
        <label>filtro3Valor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>filtro4Operacion__c</fullName>
        <label>filtro4Operacion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filtro4Parametro__c</fullName>
        <label>filtro4Parametro</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Filtros principales 4Planning</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Nombre de Filtros principales 4Planning</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filtros principales 4Plannings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>